# cauchy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
cauchy/: cli.py  client.py  lsmtree.py  server.py
src/: client.py  database.py  lsmtree.py  server.py
storage/: segment_0
tests/: test_lsmtree.py
